--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@ li {
   margin: 0 auto;
   border: none;
   box-shadow: none;
+  box-sizing: border-box;
 }
 
 #contact input[type=text],
@@ -377,9 +378,19 @@ footer p {
   }
 }
 
-
-@media only screen and (max-width: 400px) {
-  body {
-    background-color: lightblue;
+@media only screen and (max-width: 550px) {
+  #intro dt {
+    float: none;
+    display: block;
+    width: 100%;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  #contact form {
+    width: 90%;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+
